--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,7 +110,7 @@ function register() {
 	};
 	var data = {
 			data : JSON.stringify(info),
-			url : "jsps/register.jsp",
+			url : "register",
 			type : "post",
 			contentType: 'application/json',
 			dataType : 'json',
