--- a/src/main/webapp/ter.html
+++ b/src/main/webapp/ter.html
@@ -1,6 +1,56 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<style>
+
+		*{box-sizing: border-box}
+
+		.container{
+			width: 300px;
+			max-width: 390px;
+			overflow: hidden;
+			margin: 50px auto 0 auto;
+		}
+
+		.container span{width: 100%;
+			display: block;
+			text-align: center;
+			font-family: sans-serif;
+			color: #fff;
+			font-size: 25px;
+			background: #446CB3;
+		}
+
+		.container .box{float: left;
+			width: 100px;
+			height: 100px;
+			border: 1px solid #000;
+			transition: all .25s ease-in-out;
+			font-family: sans-serif;
+			font-size: 85px;
+			text-align: center;
+			line-height: 100px;
+			cursor: pointer;
+		}
+
+		.container .box:hover{background: rgba(10,10,10,0.5);
+			color: #fff
+		}
+
+		button{background: #26C281;
+			color: #fff;
+			font-weight: bold;
+			border: 1px solid yellow;
+			cursor: pointer;
+			width: 200px;
+			height: 40px;
+			font-size: 22px;
+			display: block;
+			margin: 10px auto}
+
+		.win{background: #F9690E; color: #fff}
+
+	</style>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,26 +68,18 @@
 <span data-bind="html : $data"></span><br>
 <!-- /ko -->
 
-<!-- ko foreach : { data: cartasEnMesa, as : "carta" } -->
-<button>
-	<label data-bind="html : number"></label>
-	<label> de </label>
-	<label data-bind="html : suit"></label>
-</button>
+<div class="container" id="main">
+
+<!-- ko foreach : { data: tablero, as: 'row' }  -->
+	<!-- ko foreach : { data : row, as: 'cell' } -->
+		<div class="box" data-bind="attr : {id : 'box' + $parentContext.$index() + $index()}, event : { click: $root.doPlay.bind($parentContext.$index(), $index()) } "></div>
+	<!-- /ko -->
 <!-- /ko -->
 
-<br><br>
-<!-- ko foreach : { data: cartas, as : "carta" } -->
-<button data-bind="click : $parent.ponerEnMesa">
-	<label data-bind="html : number"></label>
-	<label> de </label>
-	<label data-bind="html : suit"></label>
-</button>
-<!-- /ko -->
-
+</div>
 
 <script src="https://knockoutjs.com/downloads/knockout-3.5.0.js"></script>
-<script src="escoba.js"></script>
+<script src="ter.js"></script>
 </body>
 </html>
 
