--- a/src/main/webapp/newpassword.html
+++ b/src/main/webapp/newpassword.html
@@ -46,10 +46,11 @@ $(document).ready(function() {
 
 
 function newPassword() {
-	const params = new URLSearchParams(document.location.search);
-	const tokenURL = params.get("token");
+	var params = new URLSearchParams(document.location.search);
+	var tokenURL = params.get("token");
+	alert("El token de la url es: " +tokenURL);
 	console.log("El token de la url es: " +tokenURL)
-	/*var info = {
+	var info = {
 		type : "NewPassword",
 		newpwd1 : $("#newpwd1").val(),
 		newpwd2 : $("#newpwd2").val(),
@@ -66,11 +67,12 @@ function newPassword() {
 			window.location.href="index.html";
 		},
 		error : function(response) {
-			alert(response.message);
-			window.location.href="index.html";
+			var arrayResponse = Object.values(response);
+			var elems = arrayResponse[17];
+			alert("Error : "+elems.message);
 		}
 	};
-	$.ajax(data);*/
+	$.ajax(data);
 }
 
 </script>
