--- a/src/main/webapp/domino.html
+++ b/src/main/webapp/domino.html
@@ -30,11 +30,6 @@
 			font-size: 85px;
 			text-align: center;
 			line-height: 100px;
-			cursor: pointer;
-		}
-
-		.container .box:hover{background: rgba(10,10,10,0.5);
-			color: #fff
 		}
 
 		button{background: #26C281;
@@ -92,7 +87,7 @@ function getUser() {
 </script>
 
 <script src="https://knockoutjs.com/downloads/knockout-3.5.0.js"></script>
-<script src="ter.js"></script>
+<script src="domino.js"></script>
 </body>
 </html>
 
