--- a/src/main/webapp/newpassword.html
+++ b/src/main/webapp/newpassword.html
@@ -34,7 +34,7 @@
 				<div id="divNewPassword">
 					<strong>Write your new password:</strong>
 					<input type="password" placeholder="New password" id="newpwd1"><br>
-					<strong>Repeat your new password:<7strong>
+					<strong>Repeat your new password:</strong>
 					<input type="password" placeholder="Repeat your new password" id="newpwd2"><br>
 					<button onclick="newPassword()" id="newPasswordBtn">Accept</button><br>
 				</div>
