primera parte ranking.html

--- a/src/main/webapp/games.html
+++ b/src/main/webapp/games.html
@@ -31,7 +31,8 @@
 
 <div class="jumbotron text-center">
 	<h2>Juegos</h2>
-	<div id="mensajeCorto"></div>	
+	<div id="mensajeCorto"></div>
+	<a href='ranking.html'>Ver Ranking</a>	
 </div>
 
 <div class="jumbotron text-center">
