--- a/src/main/webapp/ter.html
+++ b/src/main/webapp/ter.html
@@ -66,7 +66,8 @@
 </div>
 <div class="jumbotron text-center">
 	<h2>Juegos</h2>
-	<div data-bind="html : mensaje"></div>	
+	<div data-bind="html : mensaje"></div>
+	<a href='index.html'>Volver a Login</a>
 </div>
 
 <div class="container" id="main">
