--- a/src/main/webapp/ranking.html
+++ b/src/main/webapp/ranking.html
@@ -36,11 +36,12 @@
 
 <div class="jumbotron text-center">
 <table border="1" id="rank-table" style="border:1px solid black;margin-left:auto;margin-right:auto;">
+	<caption>Ranking de victorias</caption>
     <thead>
         <tr>
-            <th>Rank</th>
-            <th>Jugador</th>
-            <th>Victorias</th>
+            <th id="Rank">Rank</th>
+            <th id="Jugador">Jugador</th>
+            <th id="Victorias">Victorias</th>
         </tr>
     </thead>
     <tbody>
