resolución de warnings de eclipse

--- a/src/main/webapp/domino.html
+++ b/src/main/webapp/domino.html
@@ -86,7 +86,7 @@
 </div>
 
 <div class="FichasJugador">Mis Fichas
-	<select name="fichas", id="fichas">
+	<select name="fichas" id="fichas">
 		<!-- ko foreach : { data: fichas, as: 'ficha'} -->
 			<option data-bind="value : number1 + ' | ' + number2, text : number1 + ' | ' + number2"></option>
 		<!-- /ko -->
