--- a/src/main/webapp/indexKuar.html
+++ b/src/main/webapp/indexKuar.html
@@ -81,8 +81,11 @@
 				<div class="col-sm-12" id="tictactoeBoard" style="display:none">
 					<table border="1">
 						<caption>Tabla de juego</caption>
+						<thead>
+        				<tr>
 						<th id="JuegoTablero">Juego</th>
-						
+						</tr>
+						</thead>
 						<tr>
 							<td>
 								<button data-ng-click="move([0,0])" class="square" id="00"></button>
